--- a/index.html
+++ b/index.html
@@ -1,36 +1,56 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vera's Porfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Vera's Porfolio</h1>
- <h2>I'm a Web developer</h2>
- <hr />
- <h3><a href="./public/best top 3 movies.html">Movie Ranking Project</a></h3>
-    <img src="./public/My Top 3 Movies.png" height="200" width="200" />
- 
- <h3><a href="./public/birthday invite project.html">Birthday Invite Project</a></h3>
- <img src="./public/birthday invitation.png" height="200" width="200">
- <hr />
- <a href="./public/about.html">About me</a>
- <a href="./public/contact.html">Contact me</a>
+    <img src="./images/profile.jpeg" height="200" width="200" alt="Vera's Profile Photo">
+    <h1>Summary</h1>
+    <ul>
+        <li>Results-driven Cloud Sales Representative with experience in selling Google Maps and software solutions. Strong communication and sales skills with a proven ability to handle crises effectively. Skilled in video editing, social media marketing, event planning, and product strategy, with expertise in short-form video content (Reels/TikTok). A quick learner with sharp observational skills and a collaborative mindset, fluent in both Chinese and English.</li>
+
+    </ul>
+    <hr>
+
+    <h1>Education</h1>
+    <ul><li>Cheng Shiu University, Department of Tourism and Recreation, 2014-2018</li>
+    </ul>
+    <hr>
+
+    <h1>Work Experience</h1>
+    <ol><li>Cloud Sales Representative, 2024.4-Now</li>
+        <li>Senior Insurance Sales, 2021.12-2023.12</li>
+        <li>Marketing Content Planner, 2020,12-2021,9</li>
+        <li>Store Manager, 2018.7-2020.9</li>
+    </ol>
+    <hr>
+
+    <h1>Skills</h1>
+    <h2>-Technical Skills</h2>
+    <ul><li>HTML</li>
+        <li>Google Maps Platform API</li>
+    </ul>
+
+    <h2>-Sales & Business Development</h2>
+    <ul><li>B2B Sales</li>
+        <li>SaaS Sales</li>
+        <li>Cloud Solutions Sales</li>
+        <li>Lead Generation & Prospecting</li>
+        <li>Contract Negotiation</li>
+    </ul>
+
+    <h2>-Marketing & Content Creation</h2>
+    <ul><li>Social Media Content Creation</li>
+        <li>Short-form Video Production (Reels, TikTok)</li>
+        <li>Content Strategy & Copywriting</li>
+        <li>Event Planning</li>
+        <li>Product Launch Strategy</li>
+    </ul>
+    <hr>
+    <a href="./pubilc/hobbies.html">Hobbies</a>
+    <a href="./pubilc/contact.html">Contact Me</a>
+    <footer><small>Copyright © 2025 Vera. All Rights Reserved.</small></footer>
 </body>
 </html>
