--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <title>My Resume</title>
 </head>
 <body>
+    <h1>Vera Chen</h1>
     <img src="./images/profile.jpeg" height="200" width="200" alt="Vera's Profile Photo">
-    <h1>Summary</h1>
+    <h2>Summary</h2>
     <ul>
         <li>Results-driven Cloud Sales Representative with experience in selling Google Maps and software solutions. Strong communication and sales skills with a proven ability to handle crises effectively. Skilled in video editing, social media marketing, event planning, and product strategy, with expertise in short-form video content (Reels/TikTok). A quick learner with sharp observational skills and a collaborative mindset, fluent in both Chinese and English.</li>
 
     </ul>
     <hr>
 
-    <h1>Education</h1>
+    <h2>Education</h2>
     <ul><li>Cheng Shiu University, Department of Tourism and Recreation, 2014-2018</li>
     </ul>
     <hr>
 
-    <h1>Work Experience</h1>
+    <h2>Work Experience</h2>
     <ol><li>Cloud Sales Representative, 2024.4-Now</li>
         <li>Senior Insurance Sales, 2021.12-2023.12</li>
         <li>Marketing Content Planner, 2020,12-2021,9</li>
@@ -27,13 +28,13 @@
     </ol>
     <hr>
 
-    <h1>Skills</h1>
-    <h2>-Technical Skills</h2>
+    <h2>Skills</h2>
+    <h3>-Technical Skills</h3>
     <ul><li>HTML</li>
         <li>Google Maps Platform API</li>
     </ul>
 
-    <h2>-Sales & Business Development</h2>
+    <h3>-Sales & Business Development</h3>
     <ul><li>B2B Sales</li>
         <li>SaaS Sales</li>
         <li>Cloud Solutions Sales</li>
@@ -41,7 +42,7 @@
         <li>Contract Negotiation</li>
     </ul>
 
-    <h2>-Marketing & Content Creation</h2>
+    <h3>-Marketing & Content Creation</h3>
     <ul><li>Social Media Content Creation</li>
         <li>Short-form Video Production (Reels, TikTok)</li>
         <li>Content Strategy & Copywriting</li>
